// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App redners App component correctly 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <img
      alt="nasaLogo"
      class="nasa-logo"
      src="https://cdn.cnn.com/cnnnext/dam/assets/200424060716-nasa-worm-logo.jpg"
    />
    <div
      class="Search"
    >
      <form
        class="search-form"
      >
        <input
          class="search-input"
          type="text"
        />
        <button
          class="search-btn"
          type="submit"
        >
          Go!
        </button>
      </form>
    </div>
    <p>
      No results
    </p>
  </div>
</DocumentFragment>
`;

exports[`App renders correctly 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <img
      alt="nasaLogo"
      class="nasa-logo"
      src="https://cdn.cnn.com/cnnnext/dam/assets/200424060716-nasa-worm-logo.jpg"
    />
    <div
      class="Search"
    >
      <form
        class="search-form"
      >
        <input
          class="search-input"
          type="text"
        />
        <button
          class="search-btn"
          type="submit"
        >
          Go!
        </button>
      </form>
    </div>
    <p>
      Search Results
    </p>
    <img
      alt="space-image"
      class="card-image"
      src="https://images.unsplash.com/photo-1522030299830-16b8d3d049fe?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80"
    />
  </div>
</DocumentFragment>
`;
